# food-webs-analyzer

./: .gitignore  README.md  buildEnv.bat  project.sln  pyproject.toml  requirements.txt
dat/: Black_Sea_435.m  Oyster_Reef_Dame_1981.m  Somme_Estuary_Rybarczyk_1993.m
foodWebsAnalyzer/: foodWebsAnalyzer.py  foodWebsAnalyzer.pyproj
foodWebsAnalyzer/common/: __init__.py
foodWebsAnalyzer/ecosystem/: __init__.py
foodWebsAnalyzer/utils/: __init__.py
foodwebs-analyzer/: foodwebs-analyzer.pyproj  foodwebsAnalyzer.pyproj  runMypyTest.bat
foodwebs-analyzer/ecosystem/: proportions.py
foodwebsAnalyzer/common/: matrixOperations.py
python/: foodweb-dynamics.sln
python/tests/: runMypyTest.bat  runTextTests.bat
src/: buildEnv.bat  checkLocalStability.slurm  foodWebsAnalyzer.pyproj  foodweb-dynamics-analyzer.pyproj  foodweb-dynamics.pyproj  foodwebDynamics.py  main.py  project.sln  runMypyTest.bat
src/common/: inputParameters.py
src/food-webs-analyzer/: __init__.py  food-webs-analyzer.pyproj
src/foodWebsAnalyzer/: __init__.py  foodWebsAnalyzer.py  foodWebsAnalyzer.pyproj  runMypyTest.bat
src/food_webs_analyzer.egg-info/: PKG-INFO
tests/: config.foodweb  runMypyTest.bat  runTextTests.bat  testSuite.pyproj  testsuite.foodweb
tests/ecosystems/: knownbugs.foodweb
tests/foodwebsAnalyzer/: Black_Sea_691.m  Black_Sea_692.m  Garonne_221.m
tests/modules/: testsuite.foodweb
textTest/lib/: PIL._imagingcms.cp311-mingw_x86_64.pyd  PIL._imagingft.cp311-mingw_x86_64.pyd  PIL._imagingmath.cp311-mingw_x86_64.pyd  PIL._imagingmorph.cp311-mingw_x86_64.pyd  (+18 more)
(+845 files in other folders)
